--- a/elementi-personalizzati.css
+++ b/elementi-personalizzati.css
@@ -7,31 +7,30 @@ p {
   font-family: Roboto,Arial;
 }
 .Introduzione{
-  width: 1200px;
-  vertical-align: top;
   margin-right: 0px;
-  display: inline-block;
+  display: grid;
+  grid-template-columns: 4fr 1fr;
 }
 
 .Introduzione-descrizione{
-  width: 69%;
-  vertical-align: top;
-  margin-right: 15px;
-  display: inline-block;
 }
 
 .Immagine{
-  width: 29%;
-  vertical-align: top;
-  display: inline-block;
 }
 
 .io {
   width: 100%;
   border-radius: 10px;
   float: right;
-  margin-top: 15px;
-  margin-left: 15px;
+  min-width: 175px;
+}
+.Titolo-principale {
+  margin-bottom: 2px;
+  margin-top: 5px;
+  vertical-align: top;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+  Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+  sans-serif;
 }
 
 .main-title {
@@ -46,14 +45,7 @@ p {
   font-style: italic;
   font-size: smaller;
 }
-.Titolo-principale {
-  margin-bottom: 2px;
-  margin-top: 10px;
-  vertical-align: top;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-  Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-  sans-serif;
-}
+
 .elenco-puntato {
   text-decoration: none;
   display: block;
@@ -70,4 +62,26 @@ p {
   width: 25px;
   border-radius: 50%;
   border: 1px solid #000;
+}
+.p2-sito{
+  display: grid;
+  grid-template-columns: 1frs;
+}
+.back-2-start{
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+}
+
+.back-2-start-text{
+  text-decoration: none;
+
+  font-size: 20px;
+  font-family: "SamsungOne", arial, sans-serif;
+}
+
+.back-2-start-text:hover{
+  text-decoration: underline;
 }
