--- a/elementi-personalizzati.css
+++ b/elementi-personalizzati.css
@@ -1,7 +1,58 @@
 html {
   scroll-behavior: smooth;
 }
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  background-image: url("immagini/sfondo.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed; /* Imposta lo sfondo come fisso */
+}
+p{
+  text-align: center;
+}
+br {
+  display: block;
+  content: "";
+  margin-top: 5px;
+}
+.left {
+  width: 20%;
+  position: sticky;
+  /*background-color: #f0f0f0;  Colore di sfondo della parte sinistra */
+  /*background: radial-gradient(circle at center, white 5%, orange 95% );*/
+}
+.center {
+  overflow: scroll;
+  width: 50%;
+}
+.right {
+  width: 30%;
+}
+.voci-elenco-puntato-parte-sinistra{
+  text-decoration: none;
+  display: block;
+  font-family: "SamsungOne", arial, sans-serif;
+  font-size: 13pt;
+  margin-top: 15px;
+  place-items: center;
+  text-align: center;
+  justify-content: center;
+}
+.voci-elenco-puntato-parte-sinistra:hover {
+  text-decoration: underline;
+  font-size: large;
+  
+}
+.struttura-lato-sinistro{
+  display: grid;
+}
 p {
+  font-weight: bold;
   display: block;
   margin-bottom: 16px;
   font-family: Roboto,Arial;
@@ -11,49 +62,38 @@ p {
   display: grid;
   grid-template-columns: 4fr 1fr;
 }
-
-.Introduzione-descrizione{
-}
-
-.Immagine{
-}
-
 .io {
-  width: 100%;
+  width: 80%;
   border-radius: 10px;
-  float: right;
+  text-align: center;
   min-width: 175px;
+  margin-right: 10%;
+  margin-left: 10%;
+  margin-top: 10%;
 }
 .Titolo-principale {
-  margin-bottom: 2px;
-  margin-top: 5px;
   vertical-align: top;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
   Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
   sans-serif;
+  place-items: center;
+  text-align: center;
+  margin-bottom: 1px;
 }
-
 .main-title {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
   Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
   sans-serif;
+  text-align: center;
 }
 .data-ultimo-aggiornamento {
   line-height: 0px;
-  color: rgba(0, 0, 0, 0.3);
+  text-align: center;
+  color: rgba(0, 0, 0, 0.5);
   margin-top: 0;
   font-style: italic;
   font-size: smaller;
 }
-
-.elenco-puntato {
-  text-decoration: none;
-  display: block;
-  font-family: "SamsungOne", arial, sans-serif;
-}
-.elenco-puntato:hover {
-  text-decoration: underline;
-  }
 .torna-all-inizio {
   text-align: center;
 }
@@ -74,14 +114,50 @@ p {
   align-items: center;
   justify-content: center;
 }
-
 .back-2-start-text{
   text-decoration: none;
 
   font-size: 20px;
   font-family: "SamsungOne", arial, sans-serif;
 }
-
 .back-2-start-text:hover{
   text-decoration: underline;
+}
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  display: flex;
+  height: 100vh;
+}
+.container {
+  flex: 1;
+  display: flex;
+  position: relative; /* Aggiungi una posizione relativa per poter posizionare la barra personalizzata */
+}
+.griglia-social{
+  display: grid;
+  grid-template-columns: 44fr 54fr;
+  align-items: center;
+vertical-align: middle;
+}
+.logo-linkedin{
+  width: 40px;
+  align-items: end;
+  float: right;
+}
+
+.logo-instagram{
+  width: 25px;
+  align-items: end;
+  float: right;
+  margin-right: 7px;
+  margin-bottom: 7px;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+
+.paragrafo-ultimo{
+  margin-bottom: 35px;
 }
