--- a/elementi-personalizzati.css
+++ b/elementi-personalizzati.css
@@ -154,8 +154,9 @@ vertical-align: middle;
   margin-right: 7px;
   margin-bottom: 7px;
 }
-
-
 .paragrafo-ultimo{
   margin-bottom: 35px;
+}
+::-webkit-scrollbar {
+  display: none;
 }
