--- a/elementi-personalizzati.css
+++ b/elementi-personalizzati.css
@@ -161,3 +161,10 @@ vertical-align: middle;
 .paragrafo-ultimo{
   margin-bottom: 35px;
 }
+
+.risalto{
+  font-size: 20px;
+  color: black;
+  font-weight: bold;
+  text-decoration: underline;
+}
